--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wotamann/vuetify-form-base.git"
+    "url": "git+git@github.com:activeliang/v-form-base.git"
   },
   "keywords": [
     "vue",
