--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "author": "woko@aon.at",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wotamann/vuetify-form-base/issues"
+    "url": "https://github.com:activeliang/v-form-base/issues"
   },
-  "homepage": "https://github.com/wotamann/vuetify-form-base#readme"
+  "homepage": "https://github.com:activeliang/v-form-base#readme"
 }
