--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vuetify-form-base",
-  "version": "9.2",
+  "name": "custom-vuetify-form-base",
+  "version": "0.2",
   "description": "Form-Generator as Vue-Component using Vuetify 2.0",
   "main": "index.js",
   "module": "umd/vFormBase.umd.min.js",
